# mascodex-2940045

./: .cfignore  .gitignore  .wranglerignore  AGENTS.md  AGENT_INSTALL.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  QUICKSTART.md  README.md  _routes.json  archive.html  deploy-pages.sh  deploy.sh  deploy_script.py  deploy_to_server.sh  docker-compose.yml  feed.html  game-in.html  game-us.html  game.html  index (2).html  index.html  manual_deployment_guide.md  one_liner_deploy.sh  package-lock.json  package.json  session.html  shop-order.html  shop-product.html  shop-widget.js  shop.html  sitemap-in.xml  sitemap.xml  ssh_connect.sh  tokushoho.html  wrangler.toml
.beads/: issues.jsonl
au/: index.html
backend/: .env.example  Dockerfile  README.md  ai_service.py  auth.py  config.py  database.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: ceo_profiles.py  chat.py  documents.py  interviews.py  users.py
d1/: seed-districts.sql
data/: adjacency.json  districts.json  prefectures.json
frontend/: README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
functions/: sitemap-in.xml.js  sitemap-jp.xml.js  sitemap-us.xml.js  sitemap.xml.js
game-cron-worker/: package.json  wrangler.toml
goenchan/: ENHANCED_EMAIL_DISPLAY.md  LOVABLE_PROMPT.md  README.md  chrome-extension-v2-配布用README.txt
in/: index.html
jp/: index.html
js/: au-postcode-index.json  au-suburb-tree.json  in-pin-tree.json  lifecall.js  radio-embed.js  shop-widget.js  us-zip-tree.json  zip-tree.json
(+234 files in other folders)
